Closed Bug 846977 Opened 11 years ago Closed 11 years ago

SVGMatrix doesn't need to inherit nsISupports

Categories

(Core :: SVG, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla22

People

(Reporter: dzbarsky, Assigned: dzbarsky)

Details

Attachments

(1 file)

Attached patch PatchSplinter Review
      No description provided.
Attachment #720207 - Flags: review?(bzbarsky)
Comment on attachment 720207 [details] [diff] [review]
Patch

r=me
Attachment #720207 - Flags: review?(bzbarsky) → review+
https://hg.mozilla.org/mozilla-central/rev/42f356cfcce3
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla22
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: