Bug 846977 - SVGMatrix doesn't need to inherit nsISupports r=bz