content/svg/content/src/SVGMatrix.cpp
@@ -15,19 +15,10 @@ const double radPerDegree = 2.0 * M_PI / 360.0;
 namespace mozilla {
 namespace dom {
 
-//----------------------------------------------------------------------
-// nsISupports methods:
+NS_IMPL_CYCLE_COLLECTION_WRAPPERCACHE_1(SVGMatrix, mTransform)
 
-  NS_IMPL_CYCLE_COLLECTION_WRAPPERCACHE_1(SVGMatrix, mTransform)
-
-NS_IMPL_CYCLE_COLLECTING_ADDREF(SVGMatrix)
-NS_IMPL_CYCLE_COLLECTING_RELEASE(SVGMatrix)
-
-NS_INTERFACE_MAP_BEGIN_CYCLE_COLLECTION(SVGMatrix)
-  NS_WRAPPERCACHE_INTERFACE_MAP_ENTRY
-  NS_INTERFACE_MAP_ENTRY(mozilla::dom::SVGMatrix) // pseudo-interface
-  NS_INTERFACE_MAP_ENTRY(nsISupports)
-NS_INTERFACE_MAP_END
+NS_IMPL_CYCLE_COLLECTION_ROOT_NATIVE(SVGMatrix, AddRef)
+NS_IMPL_CYCLE_COLLECTION_UNROOT_NATIVE(SVGMatrix, Release)
 
 DOMSVGTransform*
 SVGMatrix::GetParentObject() const
@@ -122,7 +113,7 @@ SVGMatrix::SetF(float aF, ErrorResult& rv)
 already_AddRefed<SVGMatrix>
 SVGMatrix::Multiply(SVGMatrix& aMatrix)
 {
-  nsCOMPtr<SVGMatrix> matrix = new SVGMatrix(aMatrix.Matrix() * Matrix());
+  nsRefPtr<SVGMatrix> matrix = new SVGMatrix(aMatrix.Matrix() * Matrix());
   return matrix.forget();
 }
 
